--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.4.8",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
+    "html2pdf.js": "^0.9.1",
     "jquery": "^3.3.1",
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
